@@ -143,4 +143,5 @@ ATTR_logfilemaxsize,
 ATTR_logfilerolldepth,
 ATTR_nextjobnum,
 ATTR_acctkeepdays,
+ATTR_jobmustreport,
 ATTR_tokens,
