@@ -869,6 +869,18 @@ attribute_def svr_attr_def[] = {
 	PARENT_TYPE_SERVER
     },
 	
+/* SRV_ATR_JobMustReport */
+    { ATTR_jobmustreport,      /* "job_must_report" */
+	decode_b,
+	encode_b,
+	set_b,
+	comp_b,
+	free_null,
+	NULL_FUNC,
+	MGR_ONLY_SET,
+	ATR_TYPE_LONG,
+	PARENT_TYPE_SERVER
+    },
 
 /* site supplied server attribute definitions if any, see site_svr_attr_*.h  */
 #include "site_svr_attr_def.h"
